# Stcode

./: .gitignore  .release-please-manifest.json  .rules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: release-please.yml  release.yml
assets/: Info.plist.template
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/keymaps/linux/: atom.json  emacs.json  jetbrains.json
assets/keymaps/macos/: atom.json  emacs.json  jetbrains.json  textmate.json
assets/settings/: default.json
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  edit_agent.rs  thread.rs  tool_permissions.rs  tools.rs
crates/agent_servers/src/: agent_servers.rs
crates/agent_settings/src/: agent_profile.rs  agent_settings.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  conversation_view.rs  entry_view_state.rs  inline_assistant.rs  inline_prompt_editor.rs  profile_selector.rs  stcode_activity_timeline.rs  thread_import.rs  thread_metadata_store.rs  threads_archive_view.rs
crates/ai_onboarding/: Cargo.toml
crates/ai_onboarding/src/: agent_panel_onboarding_content.rs  ai_onboarding.rs  plan_definitions.rs
crates/audio/src/: audio.rs
crates/auto_update/: Cargo.toml
crates/auto_update/src/: auto_update.rs  local_build.rs
crates/cli/src/: cli.rs  main.rs
crates/client/src/: client.rs
crates/cloud_llm_client/src/: cloud_llm_client.rs
crates/collections/src/: collections.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/deepseek/src/: deepseek.rs
crates/diagnostics/src/: diagnostics.rs  items.rs
crates/edit_prediction/src/: edit_prediction.rs  fim.rs  open_ai_compatible.rs  zeta.rs
crates/edit_prediction_context/src/: edit_prediction_context.rs
crates/edit_prediction_ui/: Cargo.toml
crates/edit_prediction_ui/src/: edit_prediction_button.rs
crates/editor/src/: actions.rs  display_map.rs  editor.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/feature_flags/src/: flags.rs
crates/feedback/src/: feedback.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs  file_finder_tests.rs
crates/fs/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/git_ui/src/: commit_modal.rs  commit_view.rs  conflict_view.rs  git_panel.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/: image_gallery.rs
crates/gpui/src/: window.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/icons/src/: icons.rs
crates/keymap_editor/src/: keymap_editor.rs
crates/language/src/: language.rs  language_settings.rs  syntax_map.rs
crates/language_models/: Cargo.toml
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/project/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/stcode/: Cargo.toml
crates/stcode-app/: Cargo.toml
crates/stcode-app/src/: app_state.rs  bridge.rs  chat_input.rs  main.rs  markdown.rs  render.rs  selectable_text.rs  theme.rs
crates/stcode-app/src/render/: chat.rs  modal.rs  sidebar.rs
crates/stcode-codex/: Cargo.toml
crates/stcode-codex/examples/: livetest.rs  livetest_bridge.rs  probe.rs
crates/stcode-codex/src/: bridge.rs  lib.rs  protocol.rs  rpc.rs  session.rs  spawn.rs
crates/stcode-vibe/: Cargo.toml
crates/stcode-vibe/src/: friendly.rs  git_safety.rs  lib.rs  session_worktree.rs  settings.rs
crates/stcode-vllm-proxy/: Cargo.toml
crates/stcode-vllm-proxy/src/: main.rs
crates/stcode/src/: main.rs
crates/title_bar/: Cargo.toml
crates/worktree/: Cargo.toml
crates/zed/: Cargo.toml  build.rs
docs/: README.md  backlog.md  ime-checklist.md  installing-stcode.md  m1-wireframe.md  pruning-plan.md  release-automation.md  selection-checklist.md  stcode-shell-plan.md  upstream-sync.md  vllm-developer-role-fix.md
script/: check-licenses  crate-dep-graph  new-crate  prettier  prompts  stcode-install-macos  stcode-release-macos  stcode-sync-upstream
script/licenses/: zed-licenses.toml
scripts/: build-app.sh
(+97 files in other folders)
