[workspace]
resolver = "2"
members = [
    "crates/stcode-app",
    "crates/stcode-codex",
    "crates/stcode-vibe",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gpui = "0.2"

stcode-codex = { path = "crates/stcode-codex" }
stcode-vibe = { path = "crates/stcode-vibe" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
