[package]
name = "stcode-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "stcode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gpui.workspace = true
gpui_platform.workspace = true

stcode-codex.workspace = true

rfd = "0.15"
