[package]
name = "stcode-vibe"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
git2.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
