[package]
name = "stcode-vllm-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "stcode-vllm-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
